--- a/CoffeeShopManager/GUI/UserControlManagerReceiptsTab.vi-VN.resx
+++ b/CoffeeShopManager/GUI/UserControlManagerReceiptsTab.vi-VN.resx
@@ -118,27 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnDelete.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Times New Roman, 10.2pt</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="btnDelete.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="btnDelete.Location" type="System.Drawing.Point, System.Drawing">
-    <value>734, 485</value>
-  </data>
-  <data name="btnDelete.Text" xml:space="preserve">
-    <value>Xóa</value>
-  </data>
   <data name="btnView.Font" type="System.Drawing.Font, System.Drawing">
     <value>Times New Roman, 10.2pt</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="btnView.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="btnView.Location" type="System.Drawing.Point, System.Drawing">
-    <value>614, 485</value>
+    <value>723, 482</value>
   </data>
   <data name="btnView.Text" xml:space="preserve">
     <value>Chi tiết</value>
@@ -176,20 +164,14 @@
   <data name="datSearch.Size" type="System.Drawing.Size, System.Drawing">
     <value>172, 27</value>
   </data>
-  <data name="ctxRightClick.Size" type="System.Drawing.Size, System.Drawing">
-    <value>126, 52</value>
-  </data>
   <data name="viewToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>125, 24</value>
   </data>
   <data name="viewToolStripMenuItem.Text" xml:space="preserve">
     <value>Chi tiết</value>
   </data>
-  <data name="deleteToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>125, 24</value>
-  </data>
-  <data name="deleteToolStripMenuItem.Text" xml:space="preserve">
-    <value>Xóa</value>
+  <data name="ctxRightClick.Size" type="System.Drawing.Size, System.Drawing">
+    <value>126, 28</value>
   </data>
   <data name="lblResetFilters.Font" type="System.Drawing.Font, System.Drawing">
     <value>Times New Roman, 10.2pt, style=Underline</value>
@@ -211,6 +193,9 @@
   </data>
   <data name="btnPrint.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
+  </data>
+  <data name="btnPrint.Location" type="System.Drawing.Point, System.Drawing">
+    <value>574, 482</value>
   </data>
   <data name="btnPrint.Size" type="System.Drawing.Size, System.Drawing">
     <value>109, 34</value>
